--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flexbox-react": "^4.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-bootstrap-typeahead": "^3.1.3",
     "react-dom": "^16.3.1",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
