--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --univ=3 --browser=chrome",
+    "test": "react-scripts test --env=jsdom --univ=2 --browser=firefox",
     "eject": "react-scripts eject",
     "play": "echo 'This is a test'; echo 'This is also a test';"
   },
