--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - database
     environment:
       - FLASK_APP=run.py
+    volumes:
+      - './services/dmt_backend:/api'
 
   nginx:
     build:
