--- a/services/pmt_nginx/nginx-dev.conf
+++ b/services/pmt_nginx/nginx-dev.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     
     location / {
-        proxy_pass          http://client:80;
+        proxy_pass          http://client:3000;
         proxy_redirect      default;
         proxy_set_header    Host $host;
         proxy_set_header    X-Real-IP $remote_addr;
@@ -20,13 +20,14 @@ server {
         proxy_set_header    X-Forwarded-Host $server_name;
     }
 
-    location /reports {
-        proxy_pass          http://pmt_reports:80;
+    
+    location /reports/ {
+        proxy_pass          http://pmt_reports:3000/reports;
         proxy_redirect      default;
         proxy_set_header    Host $host;
         proxy_set_header    X-Real-IP $remote_addr;
         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Host $server_name;
-    }
+   }
 
-}       
+}
