--- a/services/pmt_database/my.cnf
+++ b/services/pmt_database/my.cnf
@@ -32,3 +32,7 @@ thread_cache_size       = 8
 innodb_buffer_pool_size = 128M
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
+
+[mysqldump]
+user=root
+password=Szw42elk!
