--- a/services/dmt_frontend/Dockerfile-prod
+++ b/services/dmt_frontend/Dockerfile-prod
@@ -13,12 +13,7 @@ ENV PATH /usr/src/app/node/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 RUN npm install --silent
 RUN npm install react-scripts@1.1.4 -g --silent
-
-# set environment variables
-ARG REACT_APP_USERS_SERVICE_URL
-ENV REACT_APP_USERS_SERVICE_URL $REACT_APP_USERS_SERVICE_URL
-ARG NODE_ENV
-ENV NODE_ENV $NODE_ENV
+ENV REACT_APP_DEPLOYMENT_URL http://deg-map.main.sjcd.edu
 
 # create build
 COPY . /usr/src/app
@@ -32,9 +27,7 @@ RUN npm run build
 FROM nginx:1.15.0-alpine
 
 # copy static files
-COPY --from=BUILDER /usr/src/app/build /usr/share/nginx/html/reports
-RUN rm /etc/nginx/conf.d/default.conf
-COPY --from=BUILDER /usr/src/app/nginx.conf /etc/nginx/conf.d
+COPY --from=BUILDER /usr/src/app/build /usr/share/nginx/html
 
 
 # expose port
